# AutomatisierungBP

./: .env.example  .gitignore  .~lock.TestBP.xlsx#  Fragen.txt  Liste BP Cleaning Kreditoren.xlsx  Makefile  PDFScanner.py  PDFdump.py  Pipfile  PlayHandelsregister.py  README.md  README_API_INTEGRATION.md  TestBP.xlsx  cli.py  exel.py  handelsregister.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_handelsregister.py
.github/workflows/: ci.yml
mappings/: example_mapping.yaml
src/bpauto/: __init__.py  cli.py  excel_io.py  handelsregister.py  pdf_scanner.py
src/bpauto/providers/: __init__.py  base.py  northdata.py
src/bpauto/utils/: __init__.py  logging_setup.py
tests/: smoke_fetch.py  test_cli.py  test_excel_io.py  test_handelsregister.py  test_postal_code.py  test_provider_northdata.py
